# mlc

./: CHANGELOG.md  CMakeLists.txt  README.md  collection.cpp  collection.h  flactomp3.cpp  flactomp3.h  help.cpp  help.h  main.cpp  mlc.kdev4  taskmanager.cpp  taskmanager.h
.gitea/workflows/: release.yml
cmake/: FindFLAC.cmake  FindLAME.cmake  FindTAGLIB.cmake
packaging/Archlinux/: PKGBUILD
src/: CMakeLists.txt  collection.cpp  collection.h  decoded.cpp  decoded.h  default.conf  flactomp3.cpp  flactomp3.h  help  help.cpp  loggable.cpp  loggable.h  main.cpp  settings.cpp  settings.h  taskmanager.cpp  taskmanager.h
src/logger/: CMakeLists.txt  accumulator.cpp  accumulator.h  logger.cpp  logger.h  printer.cpp  printer.h
